macros/tests/unhappy/expected_impl.stderr
error: expected `impl`, wasm_export macro is only applicable to impl blocks
 --> tests/unhappy/expected_impl.rs:5:1
  |
5 | struct TestStruct;
  | ^^^^^^

error: expected `impl`, wasm_export macro is only applicable to impl blocks
 --> tests/unhappy/expected_impl.rs:8:1
  |
8 | enum TestEnum {}
  | ^^^^

error: expected `impl`, wasm_export macro is only applicable to impl blocks
  --> tests/unhappy/expected_impl.rs:11:1
   |
11 | fn test_fn() {}
   | ^^

error: expected `impl`, wasm_export macro is only applicable to impl blocks
  --> tests/unhappy/expected_impl.rs:14:1
   |
14 | type TestType = u8;
   | ^^^^

error: expected `impl`, wasm_export macro is only applicable to impl blocks
  --> tests/unhappy/expected_impl.rs:17:1
   |
17 | mod test_mod {}
   | ^^^

error: expected `impl`, wasm_export macro is only applicable to impl blocks
  --> tests/unhappy/expected_impl.rs:20:1
   |
20 | const TEST_COST: u8 = 1;
   | ^^^^^

error: expected `impl`, wasm_export macro is only applicable to impl blocks
  --> tests/unhappy/expected_impl.rs:23:1
   |
23 | static TEST_STATIC: u8 = 1;
   | ^^^^^^
